# local_llm_scaffolding

./: .gitignore  LICENSE  README.md  pyproject.toml
src/local_llm_scaffolding/: main.py
src/local_llm_scaffolding/agent/: __init__.py  core.py
src/local_llm_scaffolding/config/: manager.py
src/local_llm_scaffolding/config/agent/: logger_config.json  memory.example.md  system_prompt.md
src/local_llm_scaffolding/context/: general_compaction.md  manager.py
src/local_llm_scaffolding/llama/: interface.py  llama.cpp.sh  manager.py
src/local_llm_scaffolding/llama/models/: config.ini
src/local_llm_scaffolding/tools/: handler.py  utils.py
src/local_llm_scaffolding/tools/bash/: definition.json  system_prompt_injection.md  tool.py
src/local_llm_scaffolding/tools/web_fetch/: definition.json  system_prompt_injection.md  tool.py
src/local_llm_scaffolding/tools/web_search/: definition.json  system_prompt_injection.md  tool.py
src/local_llm_scaffolding/tools/web_search/resources/: eval_template.md  synthesis_template.md
tests/: context.py  test_agent_tools_bash_tool.py  test_llama_interface.py
